fixed spacing and fixed cat and dog image rotation

--- a/src/index.css
+++ b/src/index.css
@@ -323,3 +323,8 @@ nav {
     height: auto !important;
   }
 }
+
+
+.ReactModal__Overlay.ReactModal__Overlay--after-open {
+  z-index: 999 !important;
+}
